Add wcjs-prebuilt to package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "private": true,
     "main": "app://host/index.html",
     "dependencies": {
-        "wcjs-player": "*"
+        "wcjs-player": "^6.0.0",
+		"wcjs-prebuilt": "^3.0.0"
     },
     "env": "development"
 }
